# awsome

./: .gitignore  README.md  config.yml.example  fetch.py  html.pug  pyproject.toml  render.py  server.py  server.sh  util.py  watch.sh
docs/: script.js  style.css
