[tool.poetry]
name = "awsome"
version = "0.1.0"
description = "Awesome dashboard"
authors = ["Anatoly <atolia@.....com>"]

[tool.poetry.dependencies]
python = "^3.7"
boto3 = "^1.9"
kubernetes = "^9.0"
pypugjs = "^5.8"
jinja2 = "^2.10.1"
livereload = "^2.6"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
